--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?250240464" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?7407868" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -32,17 +32,41 @@ html,body{overflow-x:hidden;}
 
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <div class="clearfix colelem" id="pu209"><!-- group -->
-     <div class="clip_frame grpelem" id="u209"><!-- image -->
-      <img class="block" id="u209_img" src="images/logo.png" alt="" width="264" height="33"/>
-     </div>
+    <div class="clearfix colelem" id="pu316"><!-- group -->
      <div class="browser_width grpelem" id="u316-bw">
-      <div id="u316" title="http://www.yandex.ru/all"><!-- group -->
-       <div class="clearfix" id="u316_align_to_page">
+      <div id="u316" title="http://www.yandex.ru/all"><!-- simple frame --></div>
+     </div>
+     <div class="browser_width grpelem" id="u402-bw">
+      <div id="u402"><!-- group -->
+       <div class="clearfix" id="u402_align_to_page">
+        <div class="clip_frame grpelem" id="u209"><!-- image -->
+         <img class="block" id="u209_img" src="images/logo.png" alt="" width="264" height="33"/>
+        </div>
         <a class="nonblock nontext clearfix grpelem" id="u353-4" href="http://www.yandex.ru/all"><!-- content --><p>Все приложения</p></a>
        </div>
       </div>
      </div>
+    </div>
+    <div class="clip_frame pinned-colelem" id="u219"><!-- image -->
+     <img class="block" id="u219_img" src="images/bg.png" alt="" width="239" height="475"/>
+    </div>
+    <div class="browser_width colelem" id="u321-bw">
+     <div class="museBGSize" id="u321"><!-- column -->
+      <div class="clearfix" id="u321_align_to_page">
+       <div class="clearfix colelem" id="u230-8"><!-- content -->
+        <p id="u230-2">Визуальный поиск</p>
+        <p id="u230-4">от Яндекса</p>
+        <p id="u230-6">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
+       </div>
+       <div class="clearfix colelem" id="pu254"><!-- group -->
+        <div class="museBGSize grpelem" id="u254"><!-- simple frame --></div>
+        <a class="nonblock nontext anim_swing museBGSize grpelem" id="u286" href="index.html#second"><!-- simple frame --></a>
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="pinned-colelem" id="u225"><!-- animation -->
+     <iframe id="U398_animation" src="assets/main2/main2.html" scrolling="no" class="animationContainer an_invi"></iframe>
     </div>
     <div class="clearfix colelem" id="pu315"><!-- group -->
      <div class="browser_width grpelem" id="u315-bw">
@@ -55,30 +79,7 @@ html,body{overflow-x:hidden;}
        </div>
       </div>
      </div>
-     <div class="browser_width grpelem" id="u321-bw">
-      <div class="museBGSize" id="u321"><!-- column -->
-       <div class="clearfix" id="u321_align_to_page">
-        <div class="clearfix colelem" id="u230-8"><!-- content -->
-         <p id="u230-2">Визуальный поиск</p>
-         <p id="u230-4">от Яндекса</p>
-         <p id="u230-6">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
-        </div>
-        <div class="clearfix colelem" id="pu254"><!-- group -->
-         <div class="museBGSize grpelem" id="u254"><!-- simple frame --></div>
-         <a class="nonblock nontext anim_swing museBGSize grpelem" id="u286" href="index.html#second"><!-- simple frame --></a>
-        </div>
-       </div>
-      </div>
-     </div>
      <a class="anchor_item grpelem" id="second"></a>
-    </div>
-    <div class="clearfix colelem" id="pu219"><!-- group -->
-     <div class="clip_frame" id="u219"><!-- image -->
-      <img class="block" id="u219_img" src="images/bg.png" alt="" width="239" height="475"/>
-     </div>
-     <div id="u225"><!-- animation -->
-      <iframe id="U371_animation" src="assets/main2/main2.html" scrolling="no" class="animationContainer an_invi"></iframe>
-     </div>
     </div>
     <div class="clearfix colelem" id="u319-4"><!-- content -->
      <p id="u319-2">Наведите камеру на незнакомый предмет</p>
@@ -93,9 +94,8 @@ html,body{overflow-x:hidden;}
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="u333-5"><!-- content -->
+    <div class="clearfix colelem" id="u333-4"><!-- content -->
      <p id="u333-2">Объект найдется среди 1 077 889 образов</p>
-     <p id="u333-3">&nbsp;</p>
     </div>
     <div class="clearfix colelem" id="pu329-6"><!-- group -->
      <div class="clearfix grpelem" id="u329-6"><!-- content -->
@@ -158,7 +158,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight()/* resize height */
 Muse.Utils.initializeAnimations();/* animations */
-$('#u225').registerEdgeAnimateScrollEffect([{"play":false,"in":[-Infinity,360]},{"play":300,"in":[360,Infinity]}]);/* scroll effect */
+$('#u225').registerEdgeAnimateScrollEffect([{"play":false,"in":[-Infinity,380]},{"play":300,"in":[380,Infinity]}]);/* scroll effect */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
