--- a/assets/main2/main2.html
+++ b/assets/main2/main2.html
@@ -25,7 +25,7 @@ script.src = custHtmlRoot+"edge_includes/edge.6.0.0.min.js";
 };
 			opts.htmlRoot =custHtmlRoot;
 			AdobeEdge.loadComposition('main2', 'VisualSearch', opts,
-			{"dom":{}}, {"dom":{}});		
+			{"dom":{}}, {"style":{"${symbolSelector}":{"isStage":"true","rect":["undefined","undefined","220px","390px"],"fill":["rgba(255,255,255,1)"]}},"dom":[{"rect":["0","0","220px","390px","auto","auto"],"id":"Poster","fill":["rgba(0,0,0,0)","images/Poster.png","0px","0px"],"type":"image","tag":"img"}]});		
 			script.onload = script.onreadystatechange = null;
 			head.removeChild(script);
 		}
