--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?427423976" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?193178929" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -152,7 +152,7 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       <div class="museBGSize" id="u328"><!-- group -->
        <div class="clearfix" id="u328_align_to_page">
         <div class="clearfix grpelem" id="u334-6"><!-- content -->
-         <p id="u334-2">&quot;Умные&quot; результаты поиска</p>
+         <p id="u334-2">«Умные» результаты поиска</p>
          <p id="u334-4">Слушайте на Яндекс Музыке, добавляйте в закладки, ищите в картинках, смотрите на Авто.ру и других сервисах Яндекса.</p>
         </div>
         <a class="anchor_item grpelem" id="six"></a>
