--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3792697531" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4018812768" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -94,20 +94,17 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
          <p id="u230-4">от Яндекса</p>
          <p id="u230-6">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
         </div>
-        <div class="clearfix colelem" id="pu254"><!-- group -->
-         <div class="museBGSize grpelem" id="u254"><!-- simple frame --></div>
-         <a class="nonblock nontext anim_swing museBGSize grpelem" id="u286" href="index.html#second"><!-- simple frame --></a>
-        </div>
+        <div class="museBGSize colelem" id="u254"><!-- simple frame --></div>
        </div>
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu219"><!-- group -->
-     <div class="clip_frame" id="u219"><!-- image -->
-      <img class="block" id="u219_img" src="images/bg.png" alt="" width="239" height="475"/>
+    <div class="clearfix colelem" id="pu475"><!-- group -->
+     <div class="clip_frame" id="u475"><!-- image -->
+      <img class="block" id="u475_img" src="images/bg.png" alt="" width="243" height="478"/>
      </div>
      <div id="u225"><!-- animation -->
-      <iframe id="U460_animation" src="assets/main2/main2.html" scrolling="no" class="animationContainer an_invi"></iframe>
+      <iframe id="U464_animation" src="assets/main2/main2.html" scrolling="no" class="animationContainer an_invi"></iframe>
      </div>
     </div>
     <div class="clearfix colelem" id="pu315"><!-- group -->
@@ -184,8 +181,6 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
   <div class="preload_images">
    <img class="preload" src="images/%d0%be%d1%82%d0%ba%d1%80%d1%8b%d1%82%d1%8c-overlay.png" alt=""/>
    <img class="preload" src="images/%d0%be%d1%82%d0%ba%d1%80%d1%8b%d1%82%d1%8c-pressed.png" alt=""/>
-   <img class="preload" src="images/%d1%83%d0%b7%d0%bd%d0%b0%d1%82%d1%8c-overlay.png" alt=""/>
-   <img class="preload" src="images/%d1%83%d0%b7%d0%bd%d0%b0%d1%82%d1%8c-pressed.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
