--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?4018812768" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?119193017" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -61,20 +61,17 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <a class="anchor_item colelem" id="first"></a>
-    <div class="clearfix colelem" id="pu316"><!-- group -->
-     <div class="browser_width grpelem" id="u316-bw">
-      <div id="u316" title="http://www.yandex.ru/all"><!-- simple frame --></div>
-     </div>
-     <div class="browser_width grpelem" id="u402-bw">
-      <div id="u402"><!-- group -->
-       <div class="clearfix" id="u402_align_to_page">
-        <div class="clip_frame grpelem" id="u209"><!-- image -->
-         <img class="block" id="u209_img" src="images/logo.png" alt="" width="264" height="33"/>
-        </div>
-        <a class="nonblock nontext clearfix grpelem" id="u353-4" href="http://www.yandex.ru/all"><!-- content --><p>Все приложения</p></a>
+    <div class="browser_width colelem" id="u316-bw">
+     <div id="u316" title="http://www.yandex.ru/all"><!-- group -->
+      <div class="clearfix" id="u316_align_to_page">
+       <div class="clip_frame grpelem" id="u209"><!-- image -->
+        <img class="block" id="u209_img" src="images/logo.png" alt="" width="264" height="33"/>
        </div>
+       <a class="nonblock nontext clearfix grpelem" id="u353-4" href="http://www.yandex.ru/all"><!-- content --><p>Все приложения</p></a>
       </div>
      </div>
+    </div>
+    <div class="clearfix colelem" id="pu409"><!-- group -->
      <div class="grpelem" id="u409"><!-- custom html -->
       
 
@@ -89,12 +86,14 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
      <div class="browser_width grpelem" id="u321-bw">
       <div class="museBGSize" id="u321"><!-- column -->
        <div class="clearfix" id="u321_align_to_page">
-        <div class="clearfix colelem" id="u230-8"><!-- content -->
-         <p id="u230-2">Визуальный поиск</p>
-         <p id="u230-4">от Яндекса</p>
-         <p id="u230-6">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
+        <div class="clearfix colelem" id="u230-6"><!-- content -->
+         <p id="u230-2">Ищет то что не описать словами</p>
+         <p id="u230-4">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
         </div>
-        <div class="museBGSize colelem" id="u254"><!-- simple frame --></div>
+        <div class="clearfix colelem" id="pu254"><!-- group -->
+         <div class="museBGSize grpelem" id="u254"><!-- simple frame --></div>
+         <a class="nonblock nontext anim_swing museBGSize grpelem" id="u286" href="index.html#second"><!-- simple frame --></a>
+        </div>
        </div>
       </div>
      </div>
@@ -107,18 +106,16 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       <iframe id="U464_animation" src="assets/main2/main2.html" scrolling="no" class="animationContainer an_invi"></iframe>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu315"><!-- group -->
-     <div class="browser_width grpelem" id="u315-bw">
-      <div class="museBGSize" id="u315"><!-- group -->
-       <div class="clearfix" id="u315_align_to_page">
-        <div class="clearfix grpelem" id="u314-6"><!-- content -->
-         <p id="u314-2">Всегда с вами</p>
-         <p id="u314-4">Начните поиск из приложения или через виджет.</p>
-        </div>
+    <div class="browser_width colelem" id="u315-bw">
+     <div class="museBGSize" id="u315"><!-- column -->
+      <div class="clearfix" id="u315_align_to_page">
+       <a class="anchor_item colelem" id="second"></a>
+       <div class="clearfix colelem" id="u314-6"><!-- content -->
+        <p id="u314-2">Всегда с вами</p>
+        <p id="u314-4">Начните поиск из приложения или через виджет.</p>
        </div>
       </div>
      </div>
-     <a class="anchor_item grpelem" id="second"></a>
     </div>
     <a class="anchor_item colelem" id="third"></a>
     <div class="clearfix colelem" id="u319-6"><!-- content -->
@@ -157,22 +154,24 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       </div>
      </div>
     </div>
-    <div class="browser_width colelem" id="u330-bw">
-     <div id="u330"><!-- column -->
-      <div class="clearfix" id="u330_align_to_page">
-       <div class="position_content" id="u330_position_content">
-        <a class="anchor_item colelem" id="seven"></a>
-        <div class="clearfix colelem" id="u331-4"><!-- content -->
-         <p>Работает с сервисами Яндекса</p>
-        </div>
-        <div class="clip_frame colelem" id="u335"><!-- image -->
-         <img class="block" id="u335_img" src="images/last.jpg" alt="" width="1012" height="249"/>
-        </div>
-        <div class="clip_frame colelem" id="u347"><!-- image -->
-         <img class="block" id="u347_img" src="images/footer.jpg" alt="" width="955" height="60"/>
+    <div class="clearfix colelem" id="pu330"><!-- group -->
+     <div class="browser_width grpelem" id="u330-bw">
+      <div id="u330"><!-- column -->
+       <div class="clearfix" id="u330_align_to_page">
+        <div class="position_content" id="u330_position_content">
+         <a class="anchor_item colelem" id="seven"></a>
+         <div class="clearfix colelem" id="u331-4"><!-- content -->
+          <p>Работает с сервисами Яндекса</p>
+         </div>
+         <div class="clip_frame colelem" id="u514"><!-- image -->
+          <img class="block" id="u514_img" src="images/bg2.jpg" alt="" width="1041" height="452"/>
+         </div>
         </div>
        </div>
       </div>
+     </div>
+     <div class="clip_frame grpelem" id="u347"><!-- image -->
+      <img class="block" id="u347_img" src="images/footer.jpg" alt="" width="955" height="60"/>
      </div>
     </div>
     <div class="verticalspacer"></div>
@@ -181,6 +180,8 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
   <div class="preload_images">
    <img class="preload" src="images/%d0%be%d1%82%d0%ba%d1%80%d1%8b%d1%82%d1%8c-overlay.png" alt=""/>
    <img class="preload" src="images/%d0%be%d1%82%d0%ba%d1%80%d1%8b%d1%82%d1%8c-pressed.png" alt=""/>
+   <img class="preload" src="images/%d1%83%d0%b7%d0%bd%d0%b0%d1%82%d1%8c-overlay.png" alt=""/>
+   <img class="preload" src="images/%d1%83%d0%b7%d0%bd%d0%b0%d1%82%d1%8c-pressed.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
@@ -203,7 +204,7 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.resizeHeight()/* resize height */
 Muse.Utils.initializeAnimations();/* animations */
-$('#u225').registerEdgeAnimateScrollEffect([{"play":false,"in":[-Infinity,330]},{"play":300,"in":[330,Infinity]}]);/* scroll effect */
+$('#u225').registerEdgeAnimateScrollEffect([{"play":false,"in":[-Infinity,350]},{"play":300,"in":[350,Infinity]}]);/* scroll effect */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
