--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="chrome=IE8"/>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4052507572"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?119193017" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4170589882" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -87,7 +87,7 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
       <div class="museBGSize" id="u321"><!-- column -->
        <div class="clearfix" id="u321_align_to_page">
         <div class="clearfix colelem" id="u230-6"><!-- content -->
-         <p id="u230-2">Ищет то что не описать словами</p>
+         <p id="u230-2">Поиск без слов</p>
          <p id="u230-4">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
         </div>
         <div class="clearfix colelem" id="pu254"><!-- group -->
