--- a/index.html
+++ b/index.html
@@ -33,31 +33,6 @@ html,body{overflow-x:hidden;}
 -->
  </head>
  <body>
-
-  <!--HTML Widget code-->
-  
-
-<!--
- 
- ________  ________  ________  ________  _______   _______       ________  ________  _____ ______      
-|\   __  \|\   __  \|\   __  \|\   __  \|\  ___ \ |\  ___ \     |\   ____\|\   __  \|\   _ \  _   \    
-\ \  \|\  \ \  \|\  \ \  \|\  \ \  \|\  \ \   __/|\ \   __/|    \ \  \___|\ \  \|\  \ \  \\\__\ \  \   
- \ \  \\\  \ \  \\\  \ \  \\\  \ \  \\\  \ \  \_|/_\ \  \_|/__   \ \  \    \ \  \\\  \ \  \\|__| \  \  
-  \ \  \\\  \ \  \\\  \ \  \\\  \ \  \\\  \ \  \_|\ \ \  \_|\ \ __\ \  \____\ \  \\\  \ \  \    \ \  \ 
-   \ \_____  \ \_______\ \_______\ \_____  \ \_______\ \_______\\__\ \_______\ \_______\ \__\    \ \__\
-    \|___| \__\|_______|\|_______|\|___| \__\|_______|\|_______\|__|\|_______|\|_______|\|__|     \|__|
-          \|__|                         \|__|                                                          
-          
-© 2014-15 by www.qooqee.com
-Do not copy, use or include the source of this widget in your template, website, or any other web design/product in any format.
-Read more about our terms & conditions: http://www.qooqee.com/terms-condition
-
--->
-
-
-
-
-  
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <a class="anchor_item colelem" id="first"></a>
@@ -88,7 +63,7 @@ Read more about our terms & conditions: http://www.qooqee.com/terms-condition
        <div class="clearfix" id="u321_align_to_page">
         <div class="clearfix colelem" id="u230-6"><!-- content -->
          <p id="u230-2">Поиск без слов</p>
-         <p id="u230-4">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира.</p>
+         <p id="u230-4">Визуальный поиск – это удобный способ взаимодействия с информацией из реального мира. (Android with WebRTC)</p>
         </div>
         <div class="clearfix colelem" id="pu254"><!-- group -->
    <a class="nonblock nontext museBGSize grpelem" id="u254" href="https://visualsearchya-a23di.c9.io"><!-- simple frame --></a>
